Arrays#asList and Collections#emptyList replaced by immutable lists/sets